appId: com.kaiserinc.expomobile
---
- launchApp
- assertVisible: "Início"
- assertVisible: "Email"
- assertVisible: "Função"
- tapOn: "Configurações"
- assertVisible: "Configurações"
